# mim3_dashboard

./: .gitignore  .pre-commit-config.yaml  PRD.md  pyproject.toml
.streamlit/: config.toml
src/: app.py  main.py
src/config/: __init__.py  constants.py  log_setup.py  logging.py  paths.py
src/config/logging/: __init__.py  decorators.py  filters.py  handlers.py  rotators.py  setup.py  streamlit_integration.py
src/core/: __init__.py  app.py  bootstrap.py  session.py  us_session.py  user_session.py
src/core/messages/: __init__.py  auth_messages.py
src/core/session/: manager.py  persistance.py  state.py
src/database/: __init__.py  auth_commands.py  base.py  commons.py  connection.py  core.py  definitions.py
src/database/commands/: auth_commands.py  role_commands.py  session_commands.py  user_commands.py
src/database/core/: __init__.py  database_initialize.py  database_seeding.py  database_service.py
src/database/entities/: db_user.py
src/database/orm/: __init__.py  orm_users.py  session_commands.py
src/database/orm/commands/: auth_commands.py
src/models/: auth.py  md_user.py
src/models/adm/: adm_onauth.py  adm_onrole.py
src/models/role/: role_schemas.py  schemas.py
src/models/session/: __init__.py  session_config.py  session_context.py  session_db.py  session_health.py  session_st.py
src/models/system/: sys_seeder.py
src/models/user/: __init__.py  us_admin.py  us_auth.py  us_crud.py  us_onauth.py  us_onboard.py  us_onprofile.py  us_password.py  user_admin.py  user_auth.py  user_commons.py  user_models.py  user_password.py  user_role.py  user_seeder.py
src/repositories/: __init__.py  session_orm.py
src/repositories/protocols/: session_repository.py  user_repository.py
src/services/: __init__.py  admin_user_service.py  auth_flow_service.py  auth_service.py  role_service.py  session_restore_manager.py  session_service.py  user_auth_service.py  user_query_service.py
src/ui/: page_manager.py
src/ui/components/: auth.py  frm_login.py  logout.py  ui_auth.py  ui_logout.py
src/ui/pages/account/: pg_profile.py
src/ui/pages/admin/: pg_glob_settings.py
src/ui/pages/dashboard/: pg_dashboard.py
src/ui/pages/info/: pg_glossarium.py
src/ui/pages/reports/: pg_allocation.py  pg_area.py  pg_commission.py  pg_reseller.py  pg_sales.py  pg_sellin.py  pg_site.py  pg_transaction.py  pg_transfer.py
src/ui/pages/tools/: pg_ask_ai.py  pg_calculator.py  pg_upload.py
tests/session/: conftest.py  test_session.py  test_session_core.py  test_session_health.py  test_session_helper.py  test_session_integration.py  test_session_st.py
